provisioning/200_apps/overlays/k3d-dev/whoami/ingress-ngrok.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ngrok
spec:
  ingressClassName: ngrok
  rules:
  - host: "ghastly-calm-ferret.ngrok-free.app"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
